--- a/index.html
+++ b/index.html
@@ -3,10 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zomato</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="hero-section">
+        <div class="navbar">
+            <a href="#">Get the app</a>
+            <div class="nav-links">
+                <a href="#">Inventor Relations</a>
+                <a href="#">Add Restaruants</a>
+                <a href="#">Login</a>
+                <a href="#">Sign up</a>
+            </div>
+            <div class="nav-profile">
+                <i class="fa-solid fa-user" style="color: #fcfcfc;"></i>
+            </div>
+        </div>
+        <div class="zomato-land">
+
+        </div>
+        <div class="zomato-search">
+
+        </div>
+        <div class="hero-bg">
+            
+        </div>
+    </div>
 </body>
 </html>
