--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
                 <i class="fa-solid fa-user" style="color: #fcfcfc;"></i>
             </div>
         </div>
-        <div class="zomato-land">
-
-        </div>
-        <div class="zomato-search">
-
-        </div>
-        <div class="hero-bg">
-            
+        <div class="hero-section-container">
+            <img src="images/heroSectionLogo.png" alt="">
+            <h1>Discover the best food & drinks in Hampi-Hopster</h1>
+            <div class="hero-section-input">
+                <input type="text" placeholder="Hampi-Hopster">
+                <input type="text" placeholder="Search for a restraurant, cuisine or dish">
+            </div>
         </div>
     </div>
 </body>
