--- a/index.html
+++ b/index.html
@@ -27,13 +27,46 @@
             </div>
         </div>
         <div class="hero-section-container">
-            <img src="images/heroSectionLogo.png" alt="">
+            <img src="images/heroSectionLogo.png" alt="" class="hero-section-logo">
             <h1>Discover the best food & drinks in Hampi-Hopster</h1>
-            <div class="hero-section-input">
-                <input type="text" placeholder="Hampi-Hopster">
-                <input type="text" placeholder="Search for a restraurant, cuisine or dish">
+            <div class="hero-section-input-container">
+                <input type="text" class="hero-section-input" id="location-search" placeholder="Hampi-Hopster">
+                <input type="text" class="hero-section-input" id="dish-search" placeholder="Search for a restraurant, cuisine or dish">
             </div>
         </div>
     </div>
+    <section class="container we-offer">
+        <div class="we-offer-card">
+            <img src="images/item1.png" alt="">
+            <div class="we-offer-content">
+                <h2>Order online</h2>
+                <p>Stay home and order to your doorstep</p>
+            </div>
+        </div>
+
+        <div class="we-offer-card">
+            <img src="images/item2.png" alt="">
+            <div class="we-offer-content">
+                <h2>Dining</h2>
+                <p>View the citys favourite dining venue</p>
+            </div>
+        </div>
+
+        <div class="we-offer-card">
+            <img src="images/item3.png" alt="">
+            <div class="we-offer-content">
+                <h2>Nightlife and clubs</h2>
+                <p>Exolore the citys top nightlife outlets</p>
+            </div>
+        </div>
+
+        <div class="we-offer-card">
+            <img src="images/item4.png" alt="">
+            <div class="we-offer-content">
+                <h2>Order online</h2>
+                <p>Stay home and order to your doorstep</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
