--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         <div class="hero-section-container">
             <img src="images/heroSectionLogo.png" alt="" class="hero-section-logo">
             <h1>Discover the best food & drinks in Hampi-Hopster</h1>
-            <div class="hero-section-input-container">
-                <input type="text" class="hero-section-input" id="location-search" placeholder="Hampi-Hopster">
-                <input type="text" class="hero-section-input" id="dish-search" placeholder="Search for a restraurant, cuisine or dish">
+            <div class="hero-section_input-container">
+                <input type="text" class="hero-section_input" id="location-search" placeholder="Hampi-Hopster">
+                <input type="text" class="hero-section_input" id="dish-search" placeholder="Search for a restraurant, cuisine or dish">
             </div>
         </div>
     </div>
+
     <section class="container we-offer">
         <div class="we-offer-card">
             <img src="images/item1.png" alt="">
@@ -68,5 +69,175 @@
             </div>
         </div>
     </section>
+
+    <section class="container collections">
+        <h1>Collection</h1>
+        <div class="sub__heading_container">
+          <span>Explore curated lists of top restaurants, cafes, pubs in Hospet-Hampi based on trends</span>
+          <span>All collections in Hospet-Hampi</span>
+        </div>
+
+
+        <div class="collections_card_container">
+          <div class="card card1">
+          
+            <div class="content">
+                <h4>Live Cricket Screening</h4>
+                <span>56 Places</span>
+            </div>
+            <div class="overlay"></div>
+          </div>
+
+          <div class="card card2">
+            <div class="overlay"></div>
+            <div class="content">
+                <h4>Malnad Special</h4>
+                <span>12 Places</span>
+            </div>
+          </div>
+
+          <div class="card card3">
+            <div class="overlay"></div>
+            <div class="content">
+                <h4>Newly opened Restaurants</h4>
+                <span>36 Places</span>
+            </div>
+          </div>
+
+          <div class="card card4">
+            <div class="content">
+                <h4>Trending Pubs Near Me</h4>
+                <span>16 Places</span>
+            </div>
+            <div class="overlay"></div>
+          </div>
+
+        </div>
+    </section>
+
+    <section class="container get__the_app">
+        <div class="semiContainer">
+            <div class="left">
+              <img src="./images/mobileBanner.png" alt="Mobile Banner" />
+            </div>
+            <div class="right">
+              <h1>Get the Zomato App</h1>
+              <p>We will send you a link, open it and download in your phone</p>
+              <div class="radio__button_container">
+                <div>
+                  <input type="radio" id="email" name="download_app"/>
+                  <label for="email" style="font-size: 14px;">Email</label>
+                </div>
+                <div>
+                  <input type="radio" id="phone" name="download_app"/>
+                  <label for="phone" style="font-size: 14px;">Phone</label>
+                </div>
+              </div>
+              <div class="input_container">
+                <input type="text" placeholder="Email"/>
+                <button>Share App Link</button>
+              </div>
+              <div class="download__app_container">
+                <h5>Download App From</h5>
+                <diV>
+                  <img src="./images/appleStore.png" alt="Apple Store" />
+                  <img src="./images/playStore.png" alt="Playe Store" />
+                </diV>
+              </div>
+            </div>
+        </div>
+      </section>
+
+      <section class="container explore-options">
+        <div class="semi_container">
+          <h5>Explore options near me</h5>
+          <div class="explore_section">
+            <div class="options">
+              <p>Popular restaurants near me</p>
+              <i class="fa-sharp fa-solid fa-caret-down" style="color: #8c8c8c;"></i>
+            </div>
+            <div class="options">
+              <p>Popular restaurant types near me</p>
+              <i class="fa-sharp fa-solid fa-caret-down" style="color: #8c8c8c;"></i>
+            </div>
+            <div class="options">
+              <p>Cities we deliver to</p>
+              <i class="fa-sharp fa-solid fa-caret-down" style="color: #8c8c8c;"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="container footer">
+        <div class="footer_section1">
+            <img src="./images/logo.png" alt="zomato logo" />
+            <div class="section1__buttonContainer">
+                <button>
+                  <img src="https://flagcdn.com/w40/in.png" alt="Indian Flag"  style="width: 15px"/>
+                  India
+                </button>
+                <button><i class="fa fa-globe"></i>English</button>
+            </div>
+        </div>
+        <div class="navigation_container">
+          <div class="link__container">
+            <h5>ABOUT ZOMATO</h5>
+            <a class="footer__link" href="#">Who we are</a>
+            <a class="footer__link" href="#">Blogs</a>
+            <a class="footer__link" href="#">Work with us</a>
+            <a class="footer__link" href="#">Investor Relations</a>
+            <a class="footer__link" href="#">Report Fraud</a>
+            <a class="footer__link" href="#">Contact Us</a>
+          </div>
+
+
+          <div class="link__container">
+            <h5>ZOMAVERSE</h5>
+            <a class="footer__link" href="#">Zomato</a>
+            <a class="footer__link" href="#">Blinkit</a>
+            <a class="footer__link" href="#">Feeding India</a>
+            <a class="footer__link" href="#">Hyperpure</a>
+            <a class="footer__link" href="#">Zomaland</a>
+          </div>
+
+
+          <div class="link__container">
+            <h5>FOR RESTAURANTS</h5>
+            <a class="footer__link" href="#">Partner With Us</a>
+            <a class="footer__link" href="#">Apps for You</a>
+            <br />
+            <h5>FOR ENTERPRISES</h5>
+            <a class="footer__link" href="#">Zomato For Work</a>
+          </div>
+
+
+          <div class="link__container">
+            <h5>LEARN MORE</h5>
+            <a class="footer__link" href="#">Privacy</a>
+            <a class="footer__link" href="#">Security</a>
+            <a class="footer__link" href="#">Terms</a>
+            <a class="footer__link" href="#">Sitemap</a>
+          </div>
+
+
+          <div class="link__container">
+              <h5>Social Media</h5>
+              <div class="section__links_container">
+                  <button><i class="fa-brands fa-linkedin-in"></i></button>
+                  <button><i class="fa-brands fa-instagram"></i></button>
+                  <button><i class="fa-brands fa-twitter"></i></button>
+                  <button><i class="fa-brands fa-facebook"></i></button>
+                  <button><i class="fa-brands fa-youtube"></i></button>
+              </div>
+              <br />
+              <img src="./images/appleStore.png" alt="apple store" class="footer__section_logos" />
+              <img src="./images/playStore.png" alt="play store" class="footer__section_logos" />
+          </div>
+        </div>
+        <div class="disclamer">
+          By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies.
+           All trademarks are properties of their respective owners. 2008-2023 © Zomato™ Ltd. All rights reserved.
+        </div>
+    </footer>
 </body>
 </html>
